--- a/web-site/timetable-mirea/public/index.html
+++ b/web-site/timetable-mirea/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="На этом сайте представлено расписание для всех групп и институтов вуза РТУ МИРЭА"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
